# trading-db

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 508be5bf5d21_use_sa_enum.py  559813223f80_init_tables.py  5e57e6fc5e0b_add_stock_assets.py  7f10d5023365_add_name_to_ticker.py  845650b96c82_create_bitcoin_table.py  8484b11f633f_add_currency_to_ticker.py  8f10cb2ccfc3_add_deleted_at.py  b17069a2f80c_add_fee_tax_columns.py  da572e185607_create_bond.py  ec04950c7270_create_prices_table.py
tools/: data-script.py
trading_db/rdb/: base.py  bitcoin.py  constants.py  price.py
trading_db/rdb/asset/: stock.py
trading_db/rdb/bond/: price.py
trading_db/rdb/coin/: bitcoin.py
trading_db/rdb/stock/: price.py  tickers.py
trading_db/rdb/stock_firm/: firm.py
