[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target_version = ["py38"]

[tool.poetry]
name = "trading-db"
version = "0.1.0"
description = ""
authors = ["PinkiePie <pinkiepies912@google.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.5.5"
SQLAlchemy = "<1.4"
PyMySQL = "^1.0.2"
SQLAlchemy-Utils = "^0.36.8"
cryptography = "^3.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.812"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
