[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target_version = ["py38"]

[tool.poetry]
name = "trading-db"
version = "0.1.0"
description = ""
authors = ["PinkiePie <pinkiepies912@google.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.3"
PyMySQL = "^1.0.2"
SQLAlchemy-Utils = "^0.36.8"
cryptography = "^3.4.6"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.25"}
greenlet = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.910"
pre-commit = "^2.10.1"
sqlalchemy2-stubs = "^0.0.2-alpha.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
